- Adding version to JS - Fixing FlashCanPlay util function (was checking HTML5) - Download link is now removable
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1448 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/api.html
+++ b/fl5/js/test/examples/api.html
@@ -36,7 +36,7 @@
         <script type="text/javascript">
             var player = new jwplayer.html5(document.getElementById("player"));
 			player.setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
