--- a/fl5/js/test/examples/custom_skin.html
+++ b/fl5/js/test/examples/custom_skin.html
@@ -22,7 +22,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("beelden").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -40,7 +40,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("bekle").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -58,7 +58,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("classic").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -76,7 +76,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("five").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -94,7 +94,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("glow").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -112,7 +112,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("grungetape").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -130,7 +130,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("icecreamsneaka").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -148,7 +148,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("kleur").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -166,7 +166,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("lulu").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -184,7 +184,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("modieus").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -202,7 +202,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("nacht").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -220,7 +220,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("playcasso").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -238,7 +238,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("schoon").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -256,7 +256,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("snel").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -274,7 +274,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("stijl").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -292,7 +292,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("stormtrooper").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
