--- a/fl5/js/test/examples/failover.html
+++ b/fl5/js/test/examples/failover.html
@@ -19,7 +19,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
 	           		file: "http://developer.longtailvideo.com/player/trunk/js/test/files/bunny.flv"
             	}, {
