--- a/fl5/js/test/examples/logo.html
+++ b/fl5/js/test/examples/logo.html
@@ -21,7 +21,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player1").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -37,7 +37,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player2").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -55,7 +55,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player3").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
