--- a/fl5/js/test/examples/single_ogg.html
+++ b/fl5/js/test/examples/single_ogg.html
@@ -19,7 +19,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv",
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             
