--- a/fl5/js/test/examples/apiunittestevents.html
+++ b/fl5/js/test/examples/apiunittestevents.html
@@ -22,7 +22,7 @@
         </p>
         <script type="text/javascript">
             jwplayer("player").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -205,8 +205,8 @@
             }
 			
 			function hasFlash(){
-				for (var player in settings.players){
-					if (settings.players[player].type.toLowerCase() == "flash"){
+				for (var player in settings.players(window.location.href)){
+					if (settings.players(window.location.href)[player].type.toLowerCase() == "flash"){
 						return true;
 					}
 				}
