--- a/fl5/js/test/examples/chromeless.html
+++ b/fl5/js/test/examples/chromeless.html
@@ -35,7 +35,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
