--- a/fl5/js/test/examples/controlbar.html
+++ b/fl5/js/test/examples/controlbar.html
@@ -37,7 +37,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player1").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -47,7 +47,7 @@
             	"controlbar.position": "top"
             });
             jwplayer("player2").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -57,7 +57,7 @@
             	"controlbar.position": "over"
             });
             jwplayer("player3").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
