--- a/fl5/js/test/examples/ff3bug.html
+++ b/fl5/js/test/examples/ff3bug.html
@@ -22,7 +22,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "../../../js/test/files/bunny.mp4"
             	}, {
