--- a/fl5/js/test/examples/htmlskin.html
+++ b/fl5/js/test/examples/htmlskin.html
@@ -27,7 +27,7 @@
         </video>
         <script type="text/javascript">
             jwplayer("player").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	players: [{
             		type: "html5"
             	}],
