--- a/fl5/js/test/examples/listeners.html
+++ b/fl5/js/test/examples/listeners.html
@@ -60,7 +60,7 @@
             
             
             jwplayer("player").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
