--- a/fl5/js/test/examples/load.html
+++ b/fl5/js/test/examples/load.html
@@ -19,7 +19,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	levels: [{
             		file: "../../../js/test/files/bunny.mp4"
             	}, {
