--- a/fl5/js/test/examples/multiple_customs.html
+++ b/fl5/js/test/examples/multiple_customs.html
@@ -26,7 +26,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player1").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	//autostart: true,
             	mute: true,
             	repeat: "single",
@@ -49,7 +49,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player2").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	height: 260,
             	width: 500,
             	screencolor: "00bee0",
@@ -76,7 +76,7 @@
         </div-->
         <script type="text/javascript">
             jwplayer("player3").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	height: "88%",
             	width: "50%",
             	levels: [{
