--- a/fl5/js/test/examples/nofile.html
+++ b/fl5/js/test/examples/nofile.html
@@ -22,7 +22,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
 				players: [{
             		type: "html5"
             	}]
