--- a/fl5/js/test/examples/playlist.html
+++ b/fl5/js/test/examples/playlist.html
@@ -49,7 +49,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player1").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	playlist: playlist
             });
         </script>
@@ -61,7 +61,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player2").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	playlist: playlist,
             	repeat: "always",
             	shuffle: true,
@@ -76,11 +76,26 @@
         </div>
         <script type="text/javascript">
             jwplayer("player3").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	playlist: playlist,
             	repeat: "list"
             });
         </script>
+        <p>
+            Go to a specific item
+        </p>
+        <div height="270" id="player4" width="480">
+            HTML5 Player should replace this
+        </div>
+        <script type="text/javascript">
+            jwplayer("player4").setup({
+            	players: settings.players(window.location.href),
+            	playlist: playlist
+            });
+        </script>
+        <a href="#" onclick="jwplayer('player4').playlistItem(0);return false;">Play item 1</a>
+        <a href="#" onclick="jwplayer('player4').playlistItem(1);return false;">Play item 2</a>
+        <a href="#" onclick="jwplayer('player4').playlistItem(2);return false;">Play item 3</a>
         <h3>HTML code</h3>
     </body>
 </html>
