--- a/fl5/js/test/examples/socialmedia.html
+++ b/fl5/js/test/examples/socialmedia.html
@@ -38,7 +38,7 @@
         </iframe>
         <script type="text/javascript">
             jwplayer("player").setup({
-            	players: settings.players,
+            	players: settings.players(window.location.href),
             	plugins: {
             		hd: {
             			file: 'hd.mp4'
