--- a/fl5/js/test/examples/chromeless.html
+++ b/fl5/js/test/examples/chromeless.html
@@ -42,7 +42,8 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
-				chromeless: true
+				chromeless: true,
+				debug: "console"
             });
 			
 			function callPlayerFunction(functionid, valueid){
