--- a/fl5/js/test/examples/playlist.html
+++ b/fl5/js/test/examples/playlist.html
@@ -10,26 +10,26 @@
     <body>
         <script type="text/javascript">
             var playlist = [{
-            	levels: [{
-            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-            	}, {
-            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
-            	}],
-            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+                levels: [{
+                    file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+                }, {
+                    file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+                }],
+                image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             }, {
-            	levels: [{
-            		file: "http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4"
-            	}, {
-            		file: "http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv"
-            	}],
-            	image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
+                levels: [{
+                    file: "http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4"
+                }, {
+                    file: "http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv"
+                }],
+                image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
             }, {
-            	levels: [{
-            		file: "http://content.bitsontherun.com/videos/DMJODX8R-486405.mp4"
-            	}, {
-            		file: "http://content.bitsontherun.com/videos/DMJODX8R-604476.ogv"
-            	}],
-            	image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
+                levels: [{
+                    file: "http://content.bitsontherun.com/videos/DMJODX8R-486405.mp4"
+                }, {
+                    file: "http://content.bitsontherun.com/videos/DMJODX8R-604476.ogv"
+                }],
+                image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
             }];
         </script>
         <script type="text/javascript">
@@ -49,8 +49,8 @@
         </div>
         <script type="text/javascript">
             jwplayer("player1").setup({
-            	players: settings.players(window.location.href),
-            	playlist: playlist
+                players: settings.players(window.location.href),
+                playlist: playlist
             });
         </script>
         <p>
@@ -61,11 +61,11 @@
         </div>
         <script type="text/javascript">
             jwplayer("player2").setup({
-            	players: settings.players(window.location.href),
-            	playlist: playlist,
-            	repeat: "always",
-            	shuffle: true,
-            	debug: "console"
+                players: settings.players(window.location.href),
+                playlist: playlist,
+                repeat: "always",
+                shuffle: true,
+                debug: "console"
             });
         </script>
         <p>
@@ -76,9 +76,9 @@
         </div>
         <script type="text/javascript">
             jwplayer("player3").setup({
-            	players: settings.players(window.location.href),
-            	playlist: playlist,
-            	repeat: "list"
+                players: settings.players(window.location.href),
+                playlist: playlist,
+                repeat: "list"
             });
         </script>
         <p>
@@ -89,13 +89,29 @@
         </div>
         <script type="text/javascript">
             jwplayer("player4").setup({
-            	players: settings.players(window.location.href),
-            	playlist: playlist
+                players: settings.players(window.location.href),
+                playlist: playlist
             });
         </script>
         <a href="#" onclick="jwplayer('player4').playlistItem(0);return false;">Play item 1</a>
         <a href="#" onclick="jwplayer('player4').playlistItem(1);return false;">Play item 2</a>
         <a href="#" onclick="jwplayer('player4').playlistItem(2);return false;">Play item 3</a>
+        <p>
+            Playlist + Playlist.position
+        </p>
+        <div height="270" id="player5" width="480">
+            HTML5 Player should replace this
+        </div>
+        <script type="text/javascript">
+            jwplayer("player5").setup({
+                //players: settings.players(window.location.href, ["flash", "html5", "download"]),
+                players: settings.players(window.location.href),
+                playlist: playlist,
+                "playlist.position": "right",
+                "playlist.size": 300,
+                width: 800,
+            });
+        </script>
         <h3>HTML code</h3>
     </body>
 </html>
