- Fixing several stretching issues
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1461 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/stretching.html
+++ b/fl5/js/test/examples/stretching.html
@@ -105,7 +105,8 @@
             			}],
             			image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             			stretching: stretching.toLowerCase(),
-						height: 400
+						height: 480,
+						width: 640
             		});
             		jwplayer("player-" + stretching.toLowerCase() + "-html5").setup({
             			players: [{
@@ -118,7 +119,8 @@
             			}],
             			image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
             			stretching: stretching.toLowerCase(),
-						height: 400
+						height: 480,
+						width: 640
             		});
             	}
             }
