- Phantom, blank playlist items no longer appear - Video  replays after complete consistently and event order is as expected - Shuffled playback can start with the first item in the playlist - Added clone / deep copy method
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1466 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/playlist.html
+++ b/fl5/js/test/examples/playlist.html
@@ -109,7 +109,7 @@
                 playlist: playlist,
                 "playlist.position": "right",
                 "playlist.size": 300,
-                width: 800,
+                width: 800
             });
         </script>
         <h3>HTML code</h3>
