--- a/fl5/js/test/examples/playlist.html
+++ b/fl5/js/test/examples/playlist.html
@@ -9,28 +9,234 @@
     </head>
     <body>
         <script type="text/javascript">
-            var playlist = [{
-                levels: [{
-                    file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-                }, {
-                    file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
-                }],
-                image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
-            }, {
-                levels: [{
-                    file: "http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4"
-                }, {
-                    file: "http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv"
-                }],
-                image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
-            }, {
-                levels: [{
-                    file: "http://content.bitsontherun.com/videos/DMJODX8R-486405.mp4"
-                }, {
-                    file: "http://content.bitsontherun.com/videos/DMJODX8R-604476.ogv"
-                }],
-                image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
-            }];
+            var type = window.location.href.split("?type=")[1];
+            document.title += ": " + type;
+            var playlists = {
+            	progressive: [{
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            	}, {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
+            	}, {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/DMJODX8R-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/DMJODX8R-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
+            	}, {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            	}, {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
+            	}, {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/DMJODX8R-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/DMJODX8R-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
+            	}],
+            	rtmp: [{
+            		levels: [{
+            			bitrate: "2020",
+            			file: "cg4V7TQw-5RGjFAQM-364803.mp4",
+            			width: "1080"
+            		}, {
+            			bitrate: "1310",
+            			file: "cg4V7TQw-5RGjFAQM-364802.mp4",
+            			width: "720"
+            		}, {
+            			bitrate: "810",
+            			file: "cg4V7TQw-5RGjFAQM-364801.mp4",
+            			width: "480"
+            		}, {
+            			bitrate: "520",
+            			file: "cg4V7TQw-5RGjFAQM-364800.mp4",
+            			width: "320"
+            		}],
+            		image: "http://thumbs.bitsontherun.com/5RGjFAQM.jpg",
+            		type: "RTMP",
+            		streamer: "rtmp://sarzsmiotvm99.cloudfront.net/cfx/st"
+            	}, {
+            		levels: [{
+            			bitrate: "380",
+            			file: "cg4V7TQw-ajuWPle1-364801.mp4",
+            			width: "480"
+            		}, {
+            			bitrate: "270",
+            			file: "cg4V7TQw-ajuWPle1-364800.mp4",
+            			width: "320"
+            		}],
+            		image: "http://thumbs.bitsontherun.com/ajuWPle1.jpg",
+            		type: "RTMP",
+            		streamer: "rtmp://sarzsmiotvm99.cloudfront.net/cfx/st"
+            	}, {
+            		levels: [{
+            			bitrate: "2020",
+            			file: "cg4V7TQw-5RGjFAQM-364803.mp4",
+            			width: "1080"
+            		}, {
+            			bitrate: "1310",
+            			file: "cg4V7TQw-5RGjFAQM-364802.mp4",
+            			width: "720"
+            		}, {
+            			bitrate: "810",
+            			file: "cg4V7TQw-5RGjFAQM-364801.mp4",
+            			width: "480"
+            		}, {
+            			bitrate: "520",
+            			file: "cg4V7TQw-5RGjFAQM-364800.mp4",
+            			width: "320"
+            		}],
+            		image: "http://thumbs.bitsontherun.com/5RGjFAQM.jpg",
+            		type: "RTMP",
+            		streamer: "rtmp://sarzsmiotvm99.cloudfront.net/cfx/st"
+            	}, {
+            		levels: [{
+            			bitrate: "380",
+            			file: "cg4V7TQw-ajuWPle1-364801.mp4",
+            			width: "480"
+            		}, {
+            			bitrate: "270",
+            			file: "cg4V7TQw-ajuWPle1-364800.mp4",
+            			width: "320"
+            		}],
+            		image: "http://thumbs.bitsontherun.com/ajuWPle1.jpg",
+            		type: "RTMP",
+            		streamer: "rtmp://sarzsmiotvm99.cloudfront.net/cfx/st"
+            	}, {
+            		levels: [{
+            			bitrate: "2020",
+            			file: "cg4V7TQw-5RGjFAQM-364803.mp4",
+            			width: "1080"
+            		}, {
+            			bitrate: "1310",
+            			file: "cg4V7TQw-5RGjFAQM-364802.mp4",
+            			width: "720"
+            		}, {
+            			bitrate: "810",
+            			file: "cg4V7TQw-5RGjFAQM-364801.mp4",
+            			width: "480"
+            		}, {
+            			bitrate: "520",
+            			file: "cg4V7TQw-5RGjFAQM-364800.mp4",
+            			width: "320"
+            		}],
+            		image: "http://thumbs.bitsontherun.com/5RGjFAQM.jpg",
+            		type: "RTMP",
+            		streamer: "rtmp://sarzsmiotvm99.cloudfront.net/cfx/st"
+            	}, {
+            		levels: [{
+            			bitrate: "380",
+            			file: "cg4V7TQw-ajuWPle1-364801.mp4",
+            			width: "480"
+            		}, {
+            			bitrate: "270",
+            			file: "cg4V7TQw-ajuWPle1-364800.mp4",
+            			width: "320"
+            		}],
+            		image: "http://thumbs.bitsontherun.com/ajuWPle1.jpg",
+            		type: "RTMP",
+            		streamer: "rtmp://sarzsmiotvm99.cloudfront.net/cfx/st"
+            	}],
+            	mixed: [{
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            	}, {
+            		levels: [{
+            			bitrate: "2020",
+            			file: "cg4V7TQw-5RGjFAQM-364803.mp4",
+            			width: "1080"
+            		}, {
+            			bitrate: "1310",
+            			file: "cg4V7TQw-5RGjFAQM-364802.mp4",
+            			width: "720"
+            		}, {
+            			bitrate: "810",
+            			file: "cg4V7TQw-5RGjFAQM-364801.mp4",
+            			width: "480"
+            		}, {
+            			bitrate: "520",
+            			file: "cg4V7TQw-5RGjFAQM-364800.mp4",
+            			width: "320"
+            		}],
+            		image: "http://thumbs.bitsontherun.com/5RGjFAQM.jpg",
+            		type: "RTMP",
+            		streamer: "rtmp://sarzsmiotvm99.cloudfront.net/cfx/st"
+            	}, {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/DMJODX8R-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/DMJODX8R-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
+            	}, {
+            		levels: [{
+            			bitrate: "380",
+            			file: "cg4V7TQw-ajuWPle1-364801.mp4",
+            			width: "480"
+            		}, {
+            			bitrate: "270",
+            			file: "cg4V7TQw-ajuWPle1-364800.mp4",
+            			width: "320"
+            		}],
+            		image: "http://thumbs.bitsontherun.com/ajuWPle1.jpg",
+            		type: "RTMP",
+            		streamer: "rtmp://sarzsmiotvm99.cloudfront.net/cfx/st"
+            	}, {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
+            	}, {
+            		levels: [{
+            			bitrate: "2020",
+            			file: "cg4V7TQw-5RGjFAQM-364803.mp4",
+            			width: "1080"
+            		}, {
+            			bitrate: "1310",
+            			file: "cg4V7TQw-5RGjFAQM-364802.mp4",
+            			width: "720"
+            		}, {
+            			bitrate: "810",
+            			file: "cg4V7TQw-5RGjFAQM-364801.mp4",
+            			width: "480"
+            		}, {
+            			bitrate: "520",
+            			file: "cg4V7TQw-5RGjFAQM-364800.mp4",
+            			width: "320"
+            		}],
+            		image: "http://thumbs.bitsontherun.com/5RGjFAQM.jpg",
+            		type: "RTMP",
+            		streamer: "rtmp://sarzsmiotvm99.cloudfront.net/cfx/st"
+            	}]
+            };
+            var playlist = playlists[type];
         </script>
         <script type="text/javascript">
             document.write("<h1>" + document.title + "</h1>");
@@ -49,8 +255,8 @@
         </div>
         <script type="text/javascript">
             jwplayer("player1").setup({
-                players: settings.players(window.location.href),
-                playlist: playlist
+            	players: settings.players(window.location.href),
+            	playlist: playlist
             });
         </script>
         <p>
@@ -61,11 +267,11 @@
         </div>
         <script type="text/javascript">
             jwplayer("player2").setup({
-                players: settings.players(window.location.href),
-                playlist: playlist,
-                repeat: "always",
-                shuffle: true,
-                debug: "console"
+            	players: settings.players(window.location.href),
+            	playlist: playlist,
+            	repeat: "always",
+            	shuffle: true,
+            	debug: "console"
             });
         </script>
         <p>
@@ -76,9 +282,9 @@
         </div>
         <script type="text/javascript">
             jwplayer("player3").setup({
-                players: settings.players(window.location.href),
-                playlist: playlist,
-                repeat: "list"
+            	players: settings.players(window.location.href),
+            	playlist: playlist,
+            	repeat: "list"
             });
         </script>
         <p>
@@ -89,8 +295,8 @@
         </div>
         <script type="text/javascript">
             jwplayer("player4").setup({
-                players: settings.players(window.location.href),
-                playlist: playlist
+            	players: settings.players(window.location.href),
+            	playlist: playlist
             });
         </script>
         <a href="#" onclick="jwplayer('player4').playlistItem(0);return false;">Play item 1</a>
@@ -104,12 +310,12 @@
         </div>
         <script type="text/javascript">
             jwplayer("player5").setup({
-                //players: settings.players(window.location.href, ["flash", "html5", "download"]),
-                players: settings.players(window.location.href),
-                playlist: playlist,
-                "playlist.position": "right",
-                "playlist.size": 300,
-                width: 800
+            	//players: settings.players(window.location.href, ["flash", "html5", "download"]),
+            	players: settings.players(window.location.href),
+            	playlist: playlist,
+            	"playlist.position": "right",
+            	"playlist.size": 300,
+            	width: 800
             });
         </script>
         <h3>HTML code</h3>
