--- a/fl5/js/test/examples/testskin.html
+++ b/fl5/js/test/examples/testskin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>HTML (not XML) skin load</title>
+        <title>302ed skin with no controlbar settings</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
         <script type="text/javascript" src="settings.js">
@@ -26,7 +26,7 @@
             	players: [{
             		type: "html5"
             	}],
-				skin: "./index.html"
+				skin: "../files/testskin/oldskin.php"
             });
         </script>
         <h3>HTML code</h3>
