--- a/fl5/js/test/examples/plugins.html
+++ b/fl5/js/test/examples/plugins.html
@@ -4,6 +4,14 @@
         <title>Plugins</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script src="https://www.google.com/jsapi?key=ABQIAAAAmW4wY4GLARKwRKxx1EY4dxTCwYuWkdD_iTnqF3uxU7_DebvfxBREab8CD-MRcuvG-IzP2uSZrQpweg" type="text/javascript">
+        </script>
+        <script language="Javascript" type="text/javascript">
+            google.load("ext-core", "3");
+            google.load("dojo", "1");
+            google.load("prototype", "1");
+            google.load("mootools", "1.3.0");
+        </script>
         <script type="text/javascript" src="settings.js">
         </script>
     </head>
@@ -139,6 +147,9 @@
             }];
             
             for (var test in tests) {
+            	if (isNaN(test)) {
+            		break;
+            	}
             	var row = document.createElement("tr");
             	examplestable.appendChild(row);
             	var label = document.createElement("td");
@@ -147,6 +158,9 @@
             	label.appendChild(labelTag);
             	labelTag.innerHTML = tests[test].name;
             	for (var player in players) {
+            		if (isNaN(player)) {
+            			break;
+            		}
             		var column = document.createElement("td");
             		row.appendChild(column);
             		var div = document.createElement("div");
