Continuing to fix 5.4 failover for patch
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1489 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/multiple_customs.html
+++ b/fl5/js/test/examples/multiple_customs.html
@@ -27,7 +27,7 @@
         <script type="text/javascript">
             jwplayer("player1").setup({
             	players: settings.players(window.location.href),
-            	//autostart: true,
+            	autostart: true,
             	mute: true,
             	repeat: "single",
             	levels: [{
