- Logo works in all modes - Fixing IE issue - Arrays do not support indexOf
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1524 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/providers.html
+++ b/fl5/js/test/examples/providers.html
@@ -49,6 +49,19 @@
             		type: "video"
             	}
             }, {
+            	name: "HTTP (not set)",
+            	config: {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            	}
+            }, {
+            	name: "HTTP (set)",
+            	config: {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            		type: "http"
+            	}
+            }, {
             	name: "Sound (not set)",
             	config: {
             		file: "../../../js/test/files/bunny.mp3",
