--- a/fl5/js/test/examples/setupandremove.html
+++ b/fl5/js/test/examples/setupandremove.html
@@ -14,7 +14,23 @@
         <p>
             This page contains a player with multiple sources, so it should play back in IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
-        <h2>Standard player</h2>
+		<h2>Added and removed</h2>
+        <div height="270" id="player" width="480">
+            HTML5 Player should replace this.
+        </div>
+        <script type="text/javascript">
+            jwplayer("player").setup({
+            	players: settings.players(window.location.href),
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            });
+            jwplayer("player").remove();
+        </script>
+        <h2>Added and removed 5 times</h2>
         <div height="270" id="player1" width="480">
             HTML5 Player should replace this.
         </div>
@@ -38,14 +54,34 @@
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             });
+           jwplayer("player1").remove();
+            jwplayer("player1").setup({
+            	players: settings.players(window.location.href),
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            });
+           jwplayer("player1").remove();
+            jwplayer("player1").setup({
+            	players: settings.players(window.location.href),
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            });
         </script>
-        <h2>Download only</h2>
+        <h2>Flash player</h2>
         <div height="270" id="player2" width="480">
             HTML5 Player should replace this.
         </div>
         <script type="text/javascript">
             jwplayer("player2").setup({
-            	players: settings.players(window.location.href, ["download"]),
+            	players: settings.players(window.location.href, ["flash"]),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -55,6 +91,56 @@
             });
             jwplayer("player2").remove();
             jwplayer("player2").setup({
+            	players: settings.players(window.location.href, ["flash"]),
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            });
+        </script>
+        <h2>HTML5 player</h2>
+        <div height="270" id="player3" width="480">
+            HTML5 Player should replace this.
+        </div>
+        <script type="text/javascript">
+            jwplayer("player3").setup({
+            	players: settings.players(window.location.href, ["html5"]),
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            });
+            jwplayer("player3").remove();
+            jwplayer("player3").setup({
+            	players: settings.players(window.location.href, ["html5"]),
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            });
+        </script>
+        <h2>Download only</h2>
+        <div height="270" id="player4" width="480">
+            HTML5 Player should replace this.
+        </div>
+        <script type="text/javascript">
+            jwplayer("player4").setup({
+            	players: settings.players(window.location.href, ["download"]),
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            });
+            jwplayer("player4").remove();
+            jwplayer("player4").setup({
             	players: settings.players(window.location.href, ["download"]),
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
