--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -35,7 +35,8 @@
             				"Absolute file path": "filepathsabsolute.html",
             				"Root file path": "filepathsroot.html",
             				"Relative file path": "filepathsrelative.html"
-            			}
+            			},
+						"Mode specific targetting": "modespecificconfig.html"
             		},
             		"Video codecs": {
             			"Single MP4": "single_mp4.html",
