--- a/fl5/js/test/examples/modespecificconfig.html
+++ b/fl5/js/test/examples/modespecificconfig.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="settings.js">
         </script>
     </head>
-    <body>
+    <body style="background-color:black">
         <script type="text/javascript">
             document.write("<h1>" + document.title + "</h1>");
         </script>
