- Adding playlist + dock + controlbar example - Playlist + dock + controlbar config parsing is greatly enhanced [ticket:1191] - Calling load with autostart now starts playback [ticket:1188]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1549 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -50,6 +50,7 @@
             	"Configuration Tests": {
 					"Providers": "providers.html", 
             		"Multiple players with various options": "multiple_customs.html",
+					"Components + positions": "components.html",
             		"Skins": {
             			"All Skins": "custom_skin.html",
             			"Invalid skin path specified": "badskin.html",
